# unity-version-manager-jni

./: Dockerfile  Jenkinsfile  README.md  build.gradle  gradlew  settings.gradle
.dependabot/: config.yml
.github/: dependabot.yml
gradle/wrapper/: gradle-wrapper.properties
rust/: .gitignore  Cargo.toml  build.gradle
rust/src/: error.rs  install.rs  install.rs.orig  jni_cache.rs  jni_utils.rs  lib.rs  lib.rs.orig  logging.rs
src/main/java/net/wooga/uvm/: Component.java  Installation.java  NativeLoader.java  UnityVersionManager.java  UnityVersionManagerException.java
src/test/groovy/net/wooga/uvm/: InstallationSpec.groovy  UnityVersionManagerSpec.groovy
