[package]
name = "uvm_jni"
version = "0.1.0"
authors = ["Manfred Endres <manfred.endres@tslarusso.de>"]

[dependencies]
jni = "0.10.2"
uvm_core = { git = "https://github.com/Larusso/unity-version-manager.git", rev="db2ad20b9451f133b38aa8fe24f6ff6d9c292672"}
error-chain = "0.12.0"
log = "0.4.6"

[lib]
crate-type = ["cdylib"]
